# RustGPT

./: Cargo.toml  LICENSE.txt  README.md
.github/: codecov.yml
.github/workflows/: check.yml  rust.yml  test.yml
data/: chat_training_data.json  chat_training_data_test.csv  fitness-question-answers.json  pretraining_data.json  pretraining_data_test.csv
src/: adam.rs  dataset_loader.rs  embeddings.rs  feed_forward.rs  layer_norm.rs  lib.rs  llm.rs  main.rs  output_projection.rs  self_attention.rs  transformer.rs  vocab.rs
tests/: adam_test.rs  dataset_loader_test.rs  embeddings_test.rs  feed_forward_test.rs  llm_test.rs  output_projection_test.rs  self_attention_test.rs  transformer_test.rs  vocab_test.rs
