[package]
name = "llm"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = "0.16.1"
rand = "0.9.0"
rand_distr = "0.5.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

csv = "1.3"
[dev-dependencies]
# Add any test-specific dependencies here if needed

[lib]
name = "llm"
path = "src/lib.rs"

[[bin]]
name = "llm"
path = "src/main.rs"
